syntax = "proto3";

option go_package = "./"; 

package ledger;

message Expense {
  string id = 1;
  string person_id = 2;
  bool expense_bool = 3;
  double amount = 4;
  string description = 5;
}

message LedgerRequest {
  Expense expense = 1;
}

message LedgerResponse {
  enum Status {
    pending = 0;
    success = 1;
    failed = 2;
  }
  
  repeated Expense expenses = 1;
  Status status = 2;
}

service LedgerService {
  rpc AddExpense(LedgerRequest) returns (LedgerResponse) {}
  rpc ResetExpenses(LedgerRequest) returns (LedgerResponse) {}
  rpc GetAllExpenses(LedgerRequest) returns (LedgerResponse) {}
}